# hey_mr_postman

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_IONOS.md  README.md  TEST_PLAN.md  WALKTHROUGH.md  pyproject.toml
config/scenarios/: example.yaml
scripts/: bootstrap-deploy-repo.sh  exim_pipe_ingest.py  ingest_kb.py  install-git-hooks.sh  run_agent.py  scrape_site.py  seed_test_emails.py  update.sh
scripts/git-hooks/: pre-commit  pre-push
src/agent/: config.py  llm.py  maintenance.py
src/agent/adapters/crm/: internal_db.py
src/agent/adapters/knowledge/: chroma_kb.py
src/agent/adapters/notification/: web_queue.py
src/agent/adapters/transport/: imap_smtp.py
src/agent/core/: classify.py  draft.py  enrich.py  models.py  pipeline.py  prefilter.py  route.py
src/agent/ports/: crm.py  knowledge.py  notification.py  transport.py
src/agent/store/: db.py  repos.py  schema.sql
tests/: conftest.py  test_cli.py  test_kb_freshness.py  test_lifecycle.py  test_maintenance.py  test_parse.py  test_pipeline.py  test_prefilter.py  test_route.py
tests/fixtures/: autoreply_ooo.eml  direct_html.eml  forwarded_bodyonly.eml  forwarded_replyto.eml  mailing_list.eml
