[project]
name = "hey-mr-postman"
version = "0.1.0"
description = "Autonomous email agent — ports & adapters, cPanel IMAP/SMTP transport, shadow-mode by default."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hey Mr. Postman" }]

dependencies = [
    # Transport
    "imap-tools>=1.7",
    "imapclient>=3.0",          # IDLE mode
    # Agent orchestration
    "langgraph>=0.2",
    # LLM client
    "anthropic>=0.40",
    # Knowledge base / RAG
    "chromadb>=0.5",
    # Config + validation
    "pydantic>=2.7",
    "PyYAML>=6.0",
    # Secrets
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
mail-agent = "scripts.run_agent:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
